# data-analysis

./: .gitignore  README.md  gantt_chart.py  main.py  pyproject.toml  sales_processor.py
farmec/: sales-by-product.py  sales_processor.py
graphs/: gantt_chart.py  use_case.py
tests/: test_sales_processor.py
