[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = "small data analysis projects and scripts"
authors = ["Sean Welch <seanwelch51199@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
